# python-django-pipeline-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  manage.py  pipeline.json  pyproject.toml  vulnerability.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/api/: endpoints_rest.md
docs/arquitectura/: ddd_hexagonal.md
docs/configuracion/: django_settings.md  docker_despliegue.md  env_puerto.md
docs/desarrollo/: api_pruebas_iniciales.md  instalacion_local.md  tests_ejecucion.md
docs/errores/: general_resolucion.md
docs/pipeline/: ci_github.md
docs/seguridad/: dominio_vulnerabilidades.md
src/application/ports/: notifiers.py  repositories.py  scanners.py
src/application/use_cases/: get_dashboard_summary.py  record_vulnerability.py  register_pipeline_run.py  resolve_vulnerability.py
src/domain/pipeline/: aggregates.py  entities.py  events.py  exceptions.py  value_objects.py
src/domain/vulnerability/: aggregates.py  entities.py  events.py  exceptions.py  value_objects.py
src/infrastructure/django_app/: celery.py  urls.py  wsgi.py
src/infrastructure/notifiers/: email_notifier.py
src/infrastructure/persistence/: admin.py  models.py  pipeline_repository.py  vulnerability_repository.py
src/infrastructure/tasks/: scan_pipeline.py
src/shared/: base_entity.py  base_value_object.py  domain_event.py
tests/: conftest.py
tests/integration/infrastructure/: test_pipeline_repository.py  test_vulnerability_repository.py
tests/unit/application/: test_get_dashboard_summary.py  (+3 more)
(+12 files in other folders)
