[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-tracker"
version = "1.6.16"
description = "DevSecOps Dashboard - DDD Hexagonal con Django"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15,<3.16",
    "celery[redis]>=5.3,<5.5",
    "psycopg2-binary>=2.9,<3.0",
    "gunicorn>=22.0,<23.0",
    "whitenoise>=6.6,<7.0",
    "django-cors-headers>=4.3,<5.0",
    "django-filter>=24.0,<25.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<8.5",
    "pytest-django>=4.9,<4.12",
    "pytest-cov>=5.0,<5.1",
    "factory-boy>=3.3,<3.4",
    "ruff>=0.8,<0.9",
    "mypy>=1.10,<1.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (no Django, no DB)",
    "integration: Integration tests (requires DB)",
]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
